Fixed header z-index and one file name

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
+    z-index: 1;
 }
 
 header h1 {
